# masters-ai

01 - LLM, tokens, prompting, n-shot, grounding/: README.md
02 - LLM API with Python, token streaming/: README.md  script.py
03 - DALLE-3 + API/: script.py
04 - Whisper API + local installation/: script.py
05 - OpenAI code interpreter, chat with data/: .env.example  README.md  csvOpenAi.py  pdfOpenAi.py  requirements.txt  task1-data-chat.py
07 - OpenAI functions. Building an agent/: README.md  main.py  products_data.db  requirements.txt
11  - Capstone project/: .env  .env.example  .gitignore  README.md  app.py  buildings_with_coordinates.db  create-documents.py  db_generation.py  employees.db  main.py  mock-api.py  property_query_app.py  requirements.txt  setup-database.py  task2-business-agent.py  utils.py
Semester-02-Capstone-Project-Art/: Makefile  README.md  cover_generation.md  prompt.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
Semester-02-Capstone-Project-Art/data/original/: .gitkeep
Semester-02-Capstone-Project-Art/docs/: SETUP.md  USAGE.md
Semester-02-Capstone-Project-Art/env/: environment.yml
Semester-02-Capstone-Project-Art/scripts/: __init__.py  generate.py  utils.py
Semester-02-Capstone-Project-Art/tests/: __init__.py  test_bdd_behavior.py  test_generate_enhanced.py  test_generate_stub.py  test_integrity.py
Semester-02-Capstone-Project-Customer-ChatBot/: .env.example  DELIVERY_README.md  QUICK_START.md  RAG_app.py  README.md  app.py  config.yaml  final_commands.sh  main.py  production_setup_script.sh  project_deploy.sh  (+2 more)
(+58 files in other folders)
